# s5ci

./: Cargo.toml  Makefile  README.md  config.yaml  lxd.txt  models.rs
.github/workflows/: blank.yml
dev-scripts/: lf-prod-to-master  print-model
docker/: Dockerfile  build  docker-s5ci.txt  gdb-commands  s5ci-build  s5ci-start.in  start.sh
docker/build-builder/: builder-build  docker-builder.txt  s5ci-build-start.sh
docker/build-s5ci/: docker-s5ci.txt  s5ci-build  s5ci-start.in
docker/vpp-maketest/: Dockerfile  build  decodecores  gdb-commands  run  start.sh
go-s5ci/: autorestart.go  check-config.go  config.go  database.go  dev-test.go  gerrit-command.go  html-gen.go  interact-with-gerrit.go  job-control.go  kill-job.go  list-jobs.go  main.go  mark-active-as-failed.go  poll-loop.go  process-gerrit-reply.go  rebuild-database.go  regenerate-html.go  review.go  run-job.go  runtime-data.go  s5log.go  s5time.go  set-status.go  ssh-command.go  web-rpc-server.go
html/: monitor.html
html/css/: common.css  common.css~  layout.css
html/js/: console.js
libs/jenkins_parse/: Cargo.toml
libs/jenkins_parse/src/: lib.rs
migrations/2019-04-26-111551_initial/: down.sql  up.sql
misc/jenkins-parse/: Cargo.toml  jenkins-parse.yaml  s5ci-in.yaml
misc/jenkins-parse/src/: main.rs
scripts/: format-output  git-mirror  run-build  run-cron  run-echo  run-random  run-two
scripts/projects/: testproj.yaml  testvpp.yaml
src/: autorestart.rs  comment_triggers.rs  database.rs  gerrit_interact.rs  gerrit_types.rs  html_gen.rs  job_mgmt.rs  lib.rs  main.rs  models.rs  run_ssh_command.rs  runtime_data.rs  s5ci_config.rs  schema.rs  unix_process.rs
templates/: active_job_page.mustache  footer.mustache  group_job_page.mustache  header.mustache  job_page.mustache  layout_header.mustache  one_job.mustache  one_job_for_tr.mustache  one_job_small.mustache  one_job_small_name.mustache  part_ball.mustache  part_ball_nolink.mustache  part_joblist_menu.mustache  root_job_page.mustache
test-replies/: s5ci-gerrit-1568647563.json  s5ci-gerrit-1568844826.json  s5ci-gerrit-1568844887.json
