[package]
name = "s5ci"
version = "0.1.0"
authors = ["Andrew Yourtchenko <ayourtch@gmail.com>"]
edition = "2018"

[dependencies]
ssh2 = { git = "https://github.com/ayourtch/ssh2-rs.git" }
git2 = { version = "*", default-features = false, features = ["https", "curl", "ssh_key_from_memory"] }
serde_json = "*"
serde = "*"
serde_derive = "*"

diesel = { version = "1.1.*", features = ["postgres", "sqlite", "huge-tables", "chrono"] }
r2d2 = "*"
r2d2-diesel = "*"
lazy_static = "*"
procinfo = "*"
num_cpus = "*"
chrono = { version = "*", features = ["serde"] }
dotenv = "*"
yaml-rust = "0.4"
serde_yaml = "*"
libc = "*"
regex = "*"
mustache = "*"
psutil = "*"
clap = "*"
log = "*"
env_logger = "*"

