[package]
name = "s5ci"
version = "0.1.0"
authors = ["Andrew Yourtchenko <ayourtch@gmail.com>"]
edition = "2018"
description = "S5CI - a continuous integration daemon"
license = "Apache-2.0"

[dependencies]
ssh2 = { git = "https://github.com/ayourtch/ssh2-rs.git" }
ant_style_matcher = { git = "https://github.com/ayourtch/ant_style_matcher.git" }
git2 = { version = "*", default-features = false, features = ["https", "curl", "ssh_key_from_memory"] }
serde_json = "*"
serde = "*"
serde_derive = "*"

diesel = { version = "1.1.*", features = ["postgres", "sqlite", "huge-tables", "chrono"] }
r2d2 = "*"
r2d2-diesel = "*"
lazy_static = "*"
procinfo = "*"
num_cpus = "*"
chrono = { version = "*", features = ["serde"] }
dotenv = "*"
yaml-rust = "0.4"
serde_yaml = "*"
libc = "*"
regex = "*"
mustache = "*"
psutil = "*"
clap = "*"
log = "*"
env_logger = "*"
signal-hook = "*"
uuid = { version = "0.7", features = ["serde", "v4"] }
exec = "*"
cron = "*"
envy = "*"
rust-crypto = "*"
gethostname = "*"

jenkins_parse = { path = "libs/jenkins_parse" }

[package.metadata.rpm.cargo]
buildflags = ["--debug"]

[package.metadata.rpm.targets]
s5ci = { path = "/usr/bin/s5ci" }
